Add CF rating estimation support + reporting; show estimated marker in templates

--- a/cf_ratings/templates/home.html
+++ b/cf_ratings/templates/home.html
@@ -68,7 +68,9 @@
 
               <td class="is-vcentered has-text-centered">
                 {% if p.codeforces_rating %}
-                  <span class="tag is-info is-light is-rounded has-text-weight-semibold">{{ p.codeforces_rating }}</span>
+                  <span class="tag is-info is-light is-rounded has-text-weight-semibold">
+                    {{ p.codeforces_rating }}{% if p.codeforces_rating_estimated %} <span class="is-size-7 has-text-warning">(est)</span>{% endif %}
+                  </span>
                 {% else %}
                   <span class="has-text-grey-light is-size-7">-</span>
                 {% endif %}
