--- a/cf_ratings/templates/problem_detail.html
+++ b/cf_ratings/templates/problem_detail.html
@@ -66,7 +66,7 @@
                 <div class="is-flex is-justify-content-center is-align-items-center my-3">
                     <span class="title is-3 has-text-weight-bold">
                         {% if problem.codeforces_rating %}
-                            {{ problem.codeforces_rating }}
+                            {{ problem.codeforces_rating }}{% if problem.codeforces_rating_estimated %} <span class="is-size-7 has-text-warning">(est)</span>{% endif %}
                         {% else %}
                             <span class="has-text-grey-light">N/A</span>
                         {% endif %}
